[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "pump_tkg"
version = "0.1.0"
description = "基于时序知识图谱技术的离心泵设备故障诊断及预测平台"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.0.0",
    "streamlit>=1.28",
    "numpy>=1.24",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "chromadb>=0.4.0",
    "ollama>=0.4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
lightrag = ["lightrag-hku>=1.0.0"]
graphiti = ["graphiti-core>=0.1.0"]
dev = ["pytest>=7.0", "python-docx", "PyPDF2"]
